pom: Upgrade to Java 11 LTS.
And use a couple of new functions.